Import of SYBER/Catalyst-Plugin-ConfigLoader-MultiState-0.03.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Plugin-ConfigLoader-MultiState
gitpan-cpan-version:      0.03
gitpan-cpan-path:         SYBER/Catalyst-Plugin-ConfigLoader-MultiState-0.03.tar.gz
gitpan-cpan-author:       SYBER
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -16,9 +16,11 @@ no_index:
     - inc
     - t
 requires:
-  Catalyst::Runtime: 5.7008
+  Catalyst::Runtime: 5.71
+  Class::Accessor::Grouped: 0
   File::Spec: 3.29
+  MRO::Compat: 0
   parent: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.02
+version: 0.03
