Import of SYBER/Catalyst-Plugin-ConfigLoader-MultiState-0.06.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Plugin-ConfigLoader-MultiState
gitpan-cpan-version:      0.06
gitpan-cpan-path:         SYBER/Catalyst-Plugin-ConfigLoader-MultiState-0.06.tar.gz
gitpan-cpan-author:       SYBER
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -3,9 +3,12 @@ abstract: 'Convenient and flexible config'
 author:
   - 'Pronin Oleg <syber@cpan.org>'
 build_requires:
+  ExtUtils::MakeMaker: 6.42
   Test::More: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.79'
+generated_by: 'Module::Install version 0.95'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,4 +26,4 @@ requires:
   parent: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.05
+version: 0.06
